tests/snapshots/snapshots__project_management_unfiltered_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
┌ Project Management  by name ─────────────────────────────────────────────────────────────────────┐
│ > +finance                                                                                       │
│   +health                                                                                        │
│   +home                                                                                          │
│   +learning                                                                                      │
│   +personal                                                                                      │
│   +travel                                                                                        │
│   +work                                                                                          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 PROJECTS   j/k nav · x archive · r rename ·7 projects · 0 archived · 2026-05-06 · tuxtime 2026.7.4
