tests/snapshots/snapshots__review_nudge_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#6b7280 bg=#1f232b mod=bold} FILTERS{/}{fg=#c8ccd4 bg=#1f232b}                  {/}{bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}▶{/}{fg=#e07a7a bg=#1f232b}▮{/}{fg=#8aa9c9 bg=#1f232b}◀{/}{bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b mod=bold}/tmp/tuxtime-snapshot.txt{/}{fg=#6b7280 bg=#1f232b}  •  2 tas{/}{fg=#6b7280 bg=#1f232b mod=bold} DETAIL{/}{fg=#c8ccd4 bg=#1f232b}                           {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#7fb3a8 bg=#1f232b mod=bold} PROJECTS{/}{fg=#c8ccd4 bg=#1f232b}                 {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(2){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#6b7280 bg=#1a1d23 mod=bold}NO PRIORITY{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}─────────────────────{/}{fg=#6b7280 bg=#1f232b} priority  {/}{fg=#c8ccd4 bg=#1f232b}                       {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+Smith          {/}{fg=#6b7280 bg=#1f232b}  2{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c8ccd4 bg=#3a4150}  1 {/}{fg=#8aa9c9 bg=#3a4150 mod=bold}▸ {/}{fg=#c8ccd4 bg=#3a4150}    Draft motion {/}{fg=#7fb3a8 bg=#3a4150}+Smith{/}{fg=#c8ccd4 bg=#3a4150} {/}{fg=#c89a6e bg=#3a4150}@drafting{/}{fg=#c8ccd4 bg=#3a4150} {/}{fg=#6b7280 bg=#1f232b} created   {/}{fg=#c8ccd4 bg=#1f232b}2026-05-06             {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#6b7280 bg=#1a1d23}  2 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#c8ccd4 bg=#1a1d23}    Call with client {/}{fg=#7fb3a8 bg=#1a1d23}+Smith{/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#c89a6e bg=#1a1d23}@meeti{/}{fg=#6b7280 bg=#1f232b} projects  {/}{fg=#7fb3a8 bg=#1f232b}+Smith{/}{fg=#c8ccd4 bg=#1f232b}                 {/}
{fg=#c89a6e bg=#1f232b mod=bold} CONTEXTS{/}{fg=#c8ccd4 bg=#1f232b}                 {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#6b7280 bg=#1f232b} contexts  {/}{fg=#c89a6e bg=#1f232b}@drafting{/}{fg=#c8ccd4 bg=#1f232b}              {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@drafting       {/}{fg=#6b7280 bg=#1f232b}  1{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@meeting        {/}{fg=#6b7280 bg=#1f232b}  1{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#6b7280 bg=#1f232b mod=bold} RAW{/}{fg=#c8ccd4 bg=#1f232b}                              {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b} 2026-05-06 Draft motion {/}{fg=#7fb3a8 bg=#1f232b}+Smith{/}{fg=#c8ccd4 bg=#1f232b}   {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#c89a6e bg=#1f232b}@drafting{/}{fg=#c8ccd4 bg=#1f232b} dur:7200               {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b} log:2026-05-06                   {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}┌ ⏰{/} {fg=#8aa9c9 bg=#1f232b} End-of-Day Review ────────────────────────────────────┐{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#c8ccd4 bg=#1f232b mod=bold}You've tracked 2h 30m (2.5h) today — anything missing?{/}{bg=#1f232b}  {/}{fg=#8aa9c9 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}│{/}{bg=#1f232b}                                                          {/}{fg=#8aa9c9 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}│{/}{bg=#1f232b}     {/}{fg=#6b7280 bg=#1f232b mod=bold}[V]{/}{fg=#6b7280 bg=#1f232b}iew timesheet  {/}{fg=#6b7280 bg=#1f232b mod=bold}[M]{/}{fg=#6b7280 bg=#1f232b} add time  {/}{fg=#6b7280 bg=#1f232b mod=bold}[S]{/}{fg=#6b7280 bg=#1f232b}kip for today{/}{bg=#1f232b}     {/}{fg=#8aa9c9 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}│{/}{bg=#1f232b}                                                          {/}{fg=#8aa9c9 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}└──────────────────────────────────────────────────────────┘{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#1a1d23 bg=#8aa9c9 mod=bold} END-OF-DAY {/}{bg=#252a33}  {/}{fg=#a8b0bc bg=#252a33}V view timesheet · M add time · S skip{/}{bg=#252a33}         {/}{fg=#6b7280 bg=#252a33}2 open · 2026-05-06 · tuxtime 2026.7.1 {/}
