tests/snapshots/snapshots__settings_overlay_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 ▶▮◀ settings  •  19 tasks  •  sort:priority                                                        
                                                                                                    
 FILES                                                                                              
   todo file                   /tmp/tuxtime-snapshot.txt                                            
   config file                 /tmp/tuxtime-snapshot.toml                                           
                                                                                                    
 DISPLAY                                                                                            
   theme                       Muted Slate ▾  (Z to pick)                                           
   density                     compact ▾  (D to cycle)                                              
   line numbers                on  (L to toggle)                                                    
   status bar                  on                                                                   
   filter sidebar              on  ([ to toggle)                                                    
   detail sidebar              on  (] to toggle)                                                    
   show done in list           off  (H to toggle)                                                   
   show future in list         off  (F to toggle)                                                   
   duration badge inline       on  (I to toggle)                                                    
   log date inline             off  (O to toggle)                                                   
                                                                                                    
 BEHAVIOR                                                                                           
   default sort                priority (S to cycle)                                                
   idle nudge                  15 min  (i to change)                                                
   long timer nudge            120 min  (l to change)                                               
   rounding increment          0.1h  (r to cycle)                                                   
                                                                                                    
 KEYBINDINGS                                                                                        
                               press ? for the full list                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 SETTINGS   Esc/ ,/ q dismiss  ·  i idle nudge  ·  l long ti15 open · 2026-05-06 · tuxtime 2026.7.1
